# cplusplus_study

./: .gitignore  CMakeLists.txt  StructureStudy.cpp  SturctureStudy.h  main.cpp
Tutorial/: CMakeLists.txt  main.cpp
Tutorial/math-functions/: CMakeLists.txt  math-func.cpp  math-func.h
cmake-tutorial/: CMakeLists.txt  License.txt  README.MD  main.cpp
cmake-tutorial/hin/: CalculateSqrtConfig.h.in
cmake-tutorial/hout/: CalculateSqrtConfig.h
cmake-tutorial/math-functions/: CMakeLists.txt  CmakeLists.txt  MakeTable.cpp  math-func.cpp  math-func.h
cmake-tutorial/win-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  CalculateSqrtConfig.h  Makefile  cmake_install.cmake  install_manifest.txt
cmake-tutorial/win-build/_CPack_Packages/win64/ZIP/cmake-tutorial-13.12-win64/include/: math-func.h
cmake-tutorial/win-build/math-functions/: Makefile  cmake_install.cmake
function/: function.cpp
logic-process/: LogicProcess.h  logicProcess.cpp
math-module/: CMakeLists.txt  Math.cpp
variable/: dataInput.cpp  dataInput.h  variables.cpp  variables.h
